All layout bugs fixed

--- a/style.css
+++ b/style.css
@@ -75,7 +75,3 @@ header div{
     background-color: #38405F !important;
     border-color: #38405F !important;
 }
-
-#semestrePanelView {
-    margin-top: 15px;
-}
